# ml_project

./: .gitignore  README.md  chroma_flats_db.dvc  pyproject.toml
.dvc/: config
data/features/: .gitignore  features_10000.parquet.dvc  features_10000_final.parquet.dvc  features_with_clip.parquet.dvc
data/processed/: .gitignore  mirkvartir_moscow_flats_10000.parquet.dvc
data/raw/: .gitignore  mirkvartir_moscow_flats.csv  mirkvartir_moscow_flats_test.csv.dvc
models/: .gitignore  house_model_final.cbm.dvc  house_model_with_img.cbm.dvc  model.py  test_model.py
notebooks/: CLIP.ipynb  Практика_агент.ipynb
src/my_project/data/: config.py  flats_schema.py  http_client.py  process_flats.py  s3_storage.py  scraper.py
src/my_project/models/: preparing.py
tests/: main_test.py  test.py  test1.py
tests/data/raw/: mirkvartir_moscow_flats_s3.csv
