[project]
name = "project-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "dvc>=3.67.0",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
