[project]
name = "project-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.73",
    "cloudscraper>=1.2.71",
    "dvc>=3.67.0",
    "fastparquet>=2026.3.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
